tests/paczka1/fuzzy1/72252126.err
Error in line 9: seY7 A502 70,8
Error in line 12: 4aSSG0upt A274 51,4
Error in line 17: seY7 S155 -5,2
Error in line 5: S155 A26 95,4
Error in line 11: seY7 S155 95,1
Error in line 14: 4aSSG0upt S155 58,9
